--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test": "node --import tsx/esm --test src/*.test.ts",
     "lint": "eslint src",
     "prepare": "husky",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "start": "json-server --watch fixtures/db.json --port $PORT"
   },
   "keywords": [],
   "author": "typicode <typicode@gmail.com>",
